# mareel-vpnd

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  Cargo.toml.windows  README.md  netlink-request  wireguard-control  wireguard-nt.zip.license
.cargo/: config.toml
.github/workflows/: build.yml  release.yml
ci/: extract-driver.sh  ubuntu-multiarch.sh
mareel-vpnd/: Cargo.toml
mareel-vpnd/src/: config.rs  mareel-vpnd.rs  vpnd-configgen.rs
mareel-vpnd/src/api/: mod.rs
mareel-vpnd/src/api/common/: mod.rs
mareel-vpnd/src/api/v1/: interface.rs  mod.rs  peer.rs  route.rs
mareel-vpnd/src/api/v1/types/: mod.rs
mareel-vpnd/src/svc/: launchd.rs
mareel-vpnd/src/util/: mod.rs  svcman.rs
mareel-vpnd/src/vpnctrl/: error.rs  mod.rs  netlink.rs
mareel-vpnd/src/vpnctrl/platform_specific/: common.rs  mod.rs
mareel-vpnd/src/vpnctrl/platform_specific/linux/: interface.rs  route.rs
mareel-vpnd/src/vpnctrl/platform_specific/macos/: interface.rs  route.rs
mareel-vpnd/src/vpnctrl/platform_specific/windows/: interface.rs  mod.rs
src/: config.rs  main.rs  mareel-vpnd.rs  vpnd-configgen.rs  winsvc.rs
src/api/: interface.rs  mod.rs
src/api/common/: mod.rs
src/api/tokenauth/: mod.rs
src/api/v1/: interface.rs  mod.rs  peer.rs  route.rs  tokenauth.rs
src/api/v1/types/: mod.rs
src/svc/: launchd.rs  mod.rs  systemd.rs  winsvc.rs
src/util/: mod.rs  svcman.rs  wakeup.rs
src/vpnctrl/: error.rs  mod.rs  netlink.rs
src/vpnctrl/platform_specific/: common.rs  linux.rs  macos.rs  mod.rs  windows.rs
src/vpnctrl/platform_specific/common/: mod.rs
src/vpnctrl/platform_specific/linux/: interface.rs  mod.rs  route.rs  routing.rs
src/vpnctrl/platform_specific/macos/: interface.rs  mod.rs  route.rs
src/vpnctrl/platform_specific/windows/: interface.rs  mod.rs  route.rs
talpid-dbus/: Cargo.toml.license
talpid-dbus/src/: lib.rs  network_manager.rs  systemd_resolved.rs
talpid-types/src/: cgroup.rs  lib.rs  tunnel.rs
talpid-types/src/android/: mod.rs
talpid-types/src/net/: mod.rs  openvpn.rs  proxy.rs  wireguard.rs
tools/: license-boilerplate.sh
wgctrl/: Cargo.toml  build.rs
wgctrl/src/: lib.rs  netlink.rs
wgctrl/src/platform_specific/: common.rs  mod.rs
wgctrl/src/platform_specific/linux/: dns.rs  interface.rs  mod.rs  route.rs
wgctrl/src/platform_specific/linux/dns/: iface.rs  mod.rs  network_manager.rs  resolvconf.rs  static_resolv_conf.rs  systemd_resolved.rs
wgctrl/src/platform_specific/macos/: dns.rs  interface.rs  route.rs
wgctrl/src/platform_specific/windows/: dns.rs  ffi.rs  interface.rs  luid.rs  mod.rs  route.rs  winlog.rs
