[package]
name = "mareel-vpnd "
version = "0.4.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default=[]

[dependencies]
base64 = "0.13"
ipnet = "2.3"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
lazy_static = "1.4.0"
clap = { version = "3.0.0-rc.0", features = ["derive"] }
toml = "0.5.8"
serde = "1.0.131"
log = "0.4.14"
shell-escape = "0.1.5"
regex = "1.5.4"

[target.'cfg(feature = "keytar")'.dependencies]
keytar = "0.1.6"

[target.'cfg(target_os = "linux")'.dependencies]
wireguard-control = "1.5.0"
ipnetwork = "0.18.0"
netlink-sys = "0.7.0"
netlink-packet-route = "0.8.0"
netlink-packet-core = "0.2.4"
libc = "0.2.111"

[target.'cfg(target_os = "macos")'.dependencies]
wireguard-control = "1.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
wireguard-nt = { git = "https://github.com/Mareel-io/wireguard-nt", branch = "mareel" }
winapi = { version = "0.3", features = ["ws2def", "netioapi", "nldef", "winerror"] }
windows-service = "0.4.0"
libloading = "0.7"

