[package]
name = "mareel-vpnd"
version = "0.8.5"
edition = "2018"
license = "GPL-3.0-or-later"

[[bin]]
name = "mareel-vpnd"
path = "src/mareel-vpnd.rs"

[[bin]]
name = "vpnd-configgen"
path = "src/vpnd-configgen.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default=[]
nodbus=[]

[dependencies]
base64 = "0.13"
ipnet = "2.3"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket-client-addr = "0.5.0"
lazy_static = "1.4.0"
clap = { version = "3.0.0-rc.0", features = ["derive"] }
toml = "0.5.8"
serde = "1.0.131"
log = "0.4.14"
shell-escape = "0.1.5"
regex = "1.5.4"
dashmap = "5.0.0"
prometheus = { version = "0.13.0", features = ["process"] }
custom_error = "1.9.2"
curve25519-dalek = "3.2.0"
argon2 = "0.3.2"
rand_core = { version = "0.6", features = ["std"] }
reqwest = { version = "0.11", features = ["json"] }

[target.'cfg(feature = "nodbus")'.dependencies]
wgctrl = { path = "../wgctrl", features = [] }

[target.'cfg(not(feature = "nodbus"))'.dependencies]
wgctrl = { path = "../wgctrl", features = ["dbus"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-service = "0.4.0"
