[package]
name = "wgctrl"
version = "0.1.0"
edition = "2018"
authors = ["Empo Inc."]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default=[]

[dependencies]
base64 = "0.13"
custom_error = "1.9.2"
serde = "1.0.131"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
log = "0.4.14"
regex = "1.5.4"
ipnet = "2.3"

[target.'cfg(target_os = "linux")'.dependencies]
wireguard-control = "1.5.0"
ipnetwork = "0.18.0"
netlink-sys = "0.8"
netlink-packet-route = "0.10"
netlink-packet-core = "0.4"
libc = "0.2.111"

[target.'cfg(target_os = "macos")'.dependencies]
wireguard-control = "1.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
wireguard-nt = { git = "https://github.com/Mareel-io/wireguard-nt", branch = "mareel" }
winapi = { version = "0.3", features = ["ws2def", "netioapi", "nldef", "winerror"] }
libloading = "0.7"
