[package]
name = "wgctrl"
version = "0.1.0"
edition = "2018"
authors = ["Empo Inc."]
license = "GPL-3.0-or-later"
include = ["./build.rs"]
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default=[]

[dependencies]
base64 = "0.13"
custom_error = "1.9.2"
serde = "1.0.131"
rocket = { version = "0.5.0-rc.1", features = ["json"] }
log = "0.4.14"
regex = "1.5.4"
ipnet = "2.3"
parking_lot = "0.11"
err-derive = "0.3.0"
tokio = { version = "1.8", features = ["rt"] }
talpid-types = { path = "../talpid-types" }
lazy_static = "1.4.0"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
wireguard-control = "1.5.0"
ipnetwork = "0.18.0"
netlink-sys = "0.8"
netlink-packet-route = "0.10"
netlink-packet-core = "0.4"
libc = "0.2.111"
talpid-dbus = { path = "../talpid-dbus" }

# came from mullvad
notify = "4.0"
resolv-conf = "0.7"
duct = "0.13"
which = { version = "4.0", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
wireguard-control = "1.5.0"
system-configuration = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
wireguard-nt = "0.3"
winapi = { version = "0.3", features = ["ws2def", "netioapi", "nldef", "winerror", "stringapiset", "winnls"] }
winreg = { version = "0.10", features = ["transactions"] }
widestring = "0.5"
libloading = "0.7"
